syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sb.productservice.grpc";
option java_outer_classname = "ProductServiceProto";

// Service definition
service ProductService {
  // Request: send product name or barcode
  rpc GetProductShelfRow (ProductLookupRequest) returns (ProductShelfRowResponse);
}

// Request message
message ProductLookupRequest {
  string item_name = 1;
}

// Response message
message ProductShelfRowResponse {
  bool exists = 1;
  int32 shelf_number = 2;
  int32 row_number = 3;
  string message = 4;
}
